# ghc

./: .gitignore  .gitlab-ci.yml  .gitmodules  Build.hs  CODEOWNERS  HADRIAN_SETTINGS  Makefile  README.md  cabal.project-reinstall  cabal.project-stage1  cabal.project.boot-packages  cabal.project.boot-packages.stage1-only  cabal.project.deps  cabal.project.stage0  cabal.project.stage1  cabal.project.stage1-boot  cabal.project.stage1-rts  cabal.project.stage1.arm64-darwin  cabal.project.stage1.x86_64-linux  cabal.project.stage2  cabal.project.stage2.arm64-darwin  cabal.project.stage2.x86_64-linux  cabal.project.stage3  configure  configure.ac  hie.yaml  list-bin.sh
.github/workflows/: ci-cabal-install.yml  ci.yml  nix-based.yml  nix-ci.yml  release.yml  reusable-release.yml
.gitlab/: ci.sh  jobs.yaml
.gitlab/darwin/: toolchain.nix
.gitlab/generate-ci/: gen_ci.hs
compiler/: CodeGen.Platform.h  GHC.hs  Setup.hs  ghc.cabal  ghc.cabal.in
compiler/GHC/: Cmm.hs  Core.hs  HsToCore.hs  IfaceToCore.hs  Parser.y  Platform.hs  StgToByteCode.hs  StgToCmm.hs
compiler/GHC/Builtin/: Names.hs  PrimOps.hs  Types.hs  Utils.hs  primops.txt.pp
compiler/GHC/ByteCode/: Asm.hs  Instr.hs  Linker.hs  Types.hs
compiler/GHC/Cmm/: Lexer.x  Parser.y
compiler/GHC/CmmToAsm/: Monad.hs
compiler/GHC/CmmToLlvm/: Base.hs  Version.hs
compiler/GHC/Core/: Coercion.hs  DataCon.hs  Equality.hs  LateCC.hs  Lint.hs  Ppr.hs  Seq.hs  SimpleOpt.hs  Subst.hs  TyCon.hs  Type.hs  Unfold.hs  Utils.hs
compiler/GHC/CoreToStg/: Prep.hs
compiler/GHC/Driver/: Backpack.hs  CodeOutput.hs  Downsweep.hs  DynFlags.hs  Flags.hs  Main.hs  Make.hs  Pipeline.hs  Plugins.hs  Session.hs
compiler/GHC/Hs/: Expr.hs  Pat.hs  Utils.hs
compiler/GHC/HsToCore/: Match.hs  Quote.hs  Utils.hs
compiler/GHC/Iface/: Load.hs  Make.hs  Rename.hs  Tidy.hs  Type.hs
compiler/GHC/Linker/: Dynamic.hs  ExtraObj.hs  Loader.hs  Static.hs  Unit.hs
compiler/GHC/Parser/: Annotation.hs  HaddockLex.x  Header.hs  Lexer.x  PostProcess.hs
compiler/GHC/Rename/: Bind.hs  Env.hs  Expr.hs  Module.hs  Names.hs  Pat.hs  Splice.hs  Utils.hs
compiler/GHC/Runtime/: Eval.hs  Interpreter.hs  Loader.hs
compiler/GHC/Stg/: InferTags.hs  Lint.hs  Pipeline.hs  Syntax.hs  Utils.hs
compiler/GHC/StgToCmm/: Expr.hs  Layout.hs  Prim.hs  TagCheck.hs  Ticky.hs  Utils.hs
compiler/GHC/StgToJS/: Prim.hs  Utils.hs
compiler/GHC/SysTools/: Cpp.hs  Process.hs  Tasks.hs
compiler/GHC/Tc/: Module.hs  Solver.hs  Validity.hs
compiler/GHC/Types/: Basic.hs  Demand.hs  Hint.hs  Id.hs  SrcLoc.hs  TyThing.hs
compiler/GHC/Unit/: Finder.hs  Info.hs  State.hs  Types.hs
compiler/GHC/Utils/: Misc.hs  Outputable.hs
compiler/cbits/: cutils.c  genSym.c
distrib/: configure.ac.in
docs/users_guide/: 9.10.1-notes.rst  bugs.rst  extending_ghc.rst  ghc_config.py.in  hints.rst  phases.rst  using-optimisation.rst  wasm.rst
docs/users_guide/exts/: binary_literals.rst  constrained_class_methods.rst  constraint_kind.rst  data_kinds.rst  deriving_extra.rst  deriving_strategies.rst  disambiguate_record_fields.rst  empty_case.rst  existential_quantification.rst  explicit_forall.rst  explicit_namespaces.rst  ffi.rst  field_selectors.rst  gadt.rst  gadt_syntax.rst  generics.rst  hex_float_literals.rst  import_qualified_post.rst  instances.rst  kind_signatures.rst  lambda_case.rst  let_generalisation.rst  linear_types.rst  monomorphism.rst  multi_param_type_classes.rst  newtype_deriving.rst  numeric_underscores.rst  overloaded_labels.rst  partial_type_signatures.rst  poly_kinds.rst  primitives.rst  rank_polymorphism.rst  rebindable_syntax.rst  record_puns.rst  required_type_arguments.rst  roles.rst  scoped_type_variables.rst  standalone_deriving.rst  strict.rst  tuple_sections.rst  (+3 more)
driver/ghci/: ghci-wrapper.cabal  ghci-wrapper.cabal.in
ghc/: Main.hs  ghc-bin.cabal  ghc-bin.cabal.in
ghc/GHCi/: UI.hs
ghc/GHCi/UI/: Info.hs  Monad.hs
hadrian/bindist/: Makefile  config.mk.in
hadrian/cfg/: system.config.in
hadrian/doc/: flavours.md
hadrian/src/: Builder.hs  Flavour.hs
hadrian/src/Rules/: BinaryDist.hs  Documentation.hs  Generate.hs  Lint.hs  Test.hs
libraries/base/: base.cabal  changelog.md
libraries/ghc-boot/: ghc-boot.cabal  ghc-boot.cabal.in
libraries/ghc-boot-th/: ghc-boot-th.cabal  ghc-boot-th.cabal.in
libraries/ghc-boot-th/GHC/LanguageExtensions/: Type.hs
libraries/ghc-experimental/: ghc-experimental.cabal
libraries/ghc-experimental/src/GHC/TypeLits/: Experimental.hs
libraries/ghc-experimental/src/GHC/TypeNats/: Experimental.hs
libraries/ghc-heap/: ghc-heap.cabal
libraries/ghc-internal/: Setup.hs  configure.ac  ghc-internal.cabal  ghc-internal.cabal.in
libraries/ghc-prim/: changelog.md  ghc-prim.cabal
libraries/ghci/: ghci.cabal  ghci.cabal.in
libraries/ghci/GHCi/: Message.hs  Run.hs  TH.hs
libraries/libffi/: aclocal.m4  configure.ac  fficonfig.h.in  libffi.cabal
libraries/template-haskell/: template-haskell.cabal
linters/lint-whitespace/: lint-whitespace.cabal
m4/: fp_check_pthreads.m4
mk/: project.mk.in
rts/: .gitignore  CloneStack.c  CloneStack.h  Disassembler.c  HeapStackCheck.cmm  Hpc.c  Interpreter.c  Linker.c  Prelude.h  PrimOps.cmm  RtsFlags.c  RtsSymbols.c  RtsUtils.c  Setup.hs  TraverseHeapTest.c  configure.ac  external-symbols.list  rts.buildinfo.in  rts.cabal
rts-fs/: rts-fs.cabal
rts-headers/: rts-headers.cabal
rts-headers/include/: ghcversion.h
rts/include/: Cmm.h  ghcautoconf.h.in  ghcplatform.h.in
rts/linker/: MachO.c  PEi386.c  elf_reloc_aarch64.c
rts/posix/: Ticker.c
rts/sm/: BlockAlloc.c  NonMoving.c  NonMoving.h  NonMovingAllocate.c  Storage.h
testsuite/driver/: runtests.py  testglobals.py  testlib.py
testsuite/ghc-config/: ghc-config.hs
testsuite/mk/: boilerplate.mk
utils/check-exact/: ExactPrint.hs  Main.hs  Transform.hs  Utils.hs
utils/deriveConstants/: Main.hs
utils/genprimopcode/: Main.hs
utils/ghc-iserv/: ghc-iserv.cabal
utils/ghc-pkg/: Main.hs  ghc-pkg.cabal
utils/iserv/: iserv.cabal
utils/remote-iserv/: remote-iserv.cabal
utils/runghc/: runghc.cabal
(+293 files in other folders)
