cabal-version: 3.0
Name: ghci-wrapper
-- ProjectVersion
Version: 9.13
License: BSD-3-Clause
Synopsis: A wrapper around GHCi allowing convenient execution of scripts
Description:
    @ghci@ is a small wrapper program around GHC used on Windows
    to ensure that console setup is performed correctly.
Category: Development
build-type: Simple

Executable ghci
    Default-Language: Haskell2010
    Main-Is: ghci.c
    -- This is only used on Windows.
    if !os(windows)
      buildable: False
    Include-Dirs: ../utils
    C-Sources:
       -- the following get copied from ../utils by hadrian
       getLocation.c isMinTTY.c cwrapper.c

    -- We need to call the versioned ghc executable because the unversioned
    -- GHC executable is a wrapper that doesn't call FreeConsole and so
    -- breaks an interactive process like GHCi. See #21889, #14150 and #13411

    -- ProjectVersion
    cc-options: -DEXE_PATH="ghc-9.13"
