cabal-version:  3.0
name:           ghc-boot-th
-- ProjectVersionMunged
version:        9.13
license:        BSD-3-Clause
license-file:   LICENSE
category:       GHC
maintainer:     ghc-devs@haskell.org
bug-reports:    https://gitlab.haskell.org/ghc/ghc/issues/new
synopsis:       Shared functionality between GHC and the @template-haskell@
                library
description:    This library contains various bits shared between the @ghc@ and
                @template-haskell@ libraries.
                .
                This package exists to ensure that @template-haskell@ has a
                minimal set of transitive dependencies, since it is intended to
                be depended upon by user code.
build-type:     Simple
extra-source-files: changelog.md

source-repository head
    type:     git
    location: https://gitlab.haskell.org/ghc/ghc.git
    subdir:   libraries/ghc-boot-th

Flag bootstrap
        Description:
          Enabled when building the stage1 compiler in order to vendor the in-tree
          `ghc-boot-th` library, and through that the in-tree TH AST definitions from
          `ghc-internal`.
          See Note [Bootstrapping Template Haskell]
        Default: False
        Manual: True

Library
    default-language: Haskell2010
    other-extensions: DeriveGeneric
    default-extensions: NoImplicitPrelude

    exposed-modules:
            GHC.ForeignSrcLang.Type
            GHC.Internal.TH.Lib.Map
            GHC.Internal.TH.Ppr
            GHC.Internal.TH.PprLib
            GHC.LanguageExtensions.Type
            GHC.Lexeme

    build-depends:
        base       >= 4.7 && < 4.22,
        pretty      == 1.1.*

    if flag(bootstrap)
        cpp-options: -DBOOTSTRAP_TH
        build-depends:
            ghc-prim
        hs-source-dirs: . ../ghc-internal/src
        exposed-modules:
            GHC.Internal.TH.Lib
            GHC.Internal.TH.Syntax
        other-modules:
            GHC.Internal.ForeignSrcLang
            GHC.Internal.LanguageExtensions
            GHC.Internal.Lexeme
    else
        hs-source-dirs: .
        build-depends:
            ghc-internal
        reexported-modules:
            GHC.Internal.TH.Lib,
            GHC.Internal.TH.Lift,
            GHC.Internal.TH.Quote,
            GHC.Internal.TH.Syntax
