cabal-version:      3.0
name:               ghc-experimental
-- ProjectVersionForLib
version:            9.1300.0
synopsis:           Experimental features of GHC's standard library
description:
    This package is where experimental GHC standard library interfaces start
    life and mature. Eventually, stabilized interfaces will be
    migrated into the @base@ library.

homepage:           https://www.haskell.org/ghc/
license:            BSD-3-Clause
license-file:       LICENSE
author:             The GHC Team
maintainer:         ghc-devs@haskell.org
copyright:          (c) 2023 The GHC Team
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.Sum.Experimental
      Data.Tuple.Experimental
      GHC.PrimOps
      GHC.Profiling.Eras
      GHC.TypeLits.Experimental
      GHC.TypeNats.Experimental
      GHC.RTS.Flags.Experimental
      GHC.Stats.Experimental
      Prelude.Experimental
    if arch(wasm32)
        exposed-modules:  GHC.Wasm.Prim
    other-extensions:
    build-depends:    base >=4.20 && < 4.22,
                      -- ProjectVersionForLib
                      ghc-internal == 9.1300.*,
    hs-source-dirs:   src
    default-language: Haskell2010
