cabal-version: 3.0
Name: remote-iserv
-- ProjectVersion
Version: 9.13
License: BSD-3-Clause
Author: Moritz Angermann <moritz.angermann@gmail.com>
Maintainer: Moritz Angermann <moritz.angermann@gmail.com>
Synopsis: iserv allows GHC to delegate Template Haskell computations
Description:
  This is a very simple remote runner for iserv, to be used together
  with iserv-proxy.  The foundamental idea is that this this wrapper
  starts running the GHCi server on a given port to which iserv-proxy will
  then connect.
Category: Development
build-type: Simple

Executable remote-iserv
   Default-Language: Haskell2010
   Main-Is: Cli.hs
   Hs-Source-Dirs: src
   Build-Depends: base       >= 4   && < 5,
                  -- ProjectVersionMunged
                  ghci       == 9.13
